--- a/index.html
+++ b/index.html
@@ -3,10 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://api.fontshare.com/v2/css?f[]=satoshi@300,301,400,401,500,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/css/main.css">
     <title>Devsi</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="logo">
+                <a href="">
+                    <img src="/assets/imgs/logo-dark.png" alt="logo devsi tecnologia">
+                </a>
+            </div>
+            <div class="nav-btns">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">Sobre</a>
+                        </li>
+                        <li>
+                            <a href="#">Serviços</a>
+                        </li>
+                        <li>
+                            <a href="#">Cursos</a>
+                        </li>
+                        <li>
+                            <a href="#">Acervo</a>
+                        </li>
+                        <li>
+                            <a href="#">Contato</a>
+                        </li>
+                    </ul>
+                </nav>
+
+                <div class="mobile-menu" id="mobile-menu">
+                    <ul>
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">Sobre</a>
+                        </li>
+                        <li>
+                            <a href="#">Serviços</a>
+                        </li>
+                        <li>
+                            <a href="#">Cursos</a>
+                        </li>
+                        <li>
+                            <a href="#">Acervo</a>
+                        </li>
+                        <li>
+                            <a href="#">Contato</a>
+                        </li>
+                    </ul>
+
+                    <div class="btns-menu-mobile">
+                        <button class="btn-header-primary">Sou Empresa <img src="/assets/svgs/empresa.svg" alt="Sou empresa"></button>
+                        <button class="btn-header-outline">Sou aluno <img src="/assets/svgs/student.svg" alt="Area do aluno"></button>
+                    </div>
+
+
+                    
+                </div>
+
+
+                <div class="btns-header">
+                    <button class="btn-header-outline">Sou aluno <img src="/assets/svgs/student.svg" alt="Area do aluno"></button>
+                    <button class="btn-header-primary">Sou Empresa <img src="/assets/svgs/empresa.svg" alt="Sou empresa"></button>
+                </div>
+                <div class="icon-menu-mobile" id="hamburguer">
+                    <img src="/assets/svgs/hamburguer-menu.svg" alt="menu hamburguer-menu" onclick="toggleMenu()">
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <div class="s-hero">
+        <div class="container">
+            <div class="text-hero">
+                <h1>Transforme seu conhecimento em resultados reais</h1>
+                <p>Cursos práticos, atualizados e direto ao ponto,tudo em uma plataforma feita para <br> quem quer aprender de verdade.</p>
+            </div>
+
+            <button class="btn-primary">Quero me inscrever</button>
+
+            <div class="video-hero">
+                <iframe 
+                src="https://www.youtube.com/embed/aYo3aFMaG5Q?controls=0&modestbranding=1&rel=0&autoplay=1&mute=1" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" 
+                allowfullscreen>
+              </iframe>
+
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <script src="/js/menu.js"></script>
 </body>
 </html>
