--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     <button class="filter-tab " data-filter="excel">Excel</button>
                     <button class="filter-tab " data-filter="informatica">Informática</button>
                     <button class="filter-tab " data-filter="tiCorporativa">TI Corporativa</button>
-                    <button class="filter-tab " data-filter="lgpd">LGPD</button>
+                    <button class="filter-tab " data-filter="word">Word</button>
                     <button class="filter-tab " data-filter="powerPoint">Power Point</button>
                 </div>
             </div>
@@ -257,7 +257,7 @@
 
                 <div class="curso-card" data-category="informatica">
                     <div class="image-card">
-                        <img src="/assets/imgs/informatica-essencial.jpg" alt="curso informartica">
+                        <img src="/assets/imgs/informaticaessencial.png" alt="curso informartica">
                     </div>
 
                     <div class="info-card">
@@ -287,7 +287,7 @@
 
                 <div class="curso-card" data-category="tiCorporativa">
                     <div class="image-card">
-                        <img src="/assets/imgs/informatica-essencial.jpg" alt="curso informartica">
+                        <img src="/assets/imgs/Ticorporativa.png" alt="curso informartica">
                     </div>
 
                     <div class="info-card">
@@ -317,7 +317,7 @@
 
                 <div class="curso-card" data-category="excel">
                     <div class="image-card">
-                        <img src="/assets/imgs/informatica-essencial.jpg" alt="curso informartica">
+                        <img src="/assets/imgs/excel.png" alt="curso informartica">
                     </div>
 
                     <div class="info-card">
@@ -334,7 +334,67 @@
                         </div>
 
                         <div class="titulo">
-                            <h4>Excel</h4>
+                            <h4>Excel do basico ao avançado</h4>
+                        </div>
+
+                        <div class="bottom">
+                            <div class="price">R$ 157,00 </div>
+                            <button class="btn-card">Ver curso</button>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="curso-card" data-category="word">
+                    <div class="image-card">
+                        <img src="/assets/imgs/word.png" alt="curso informartica">
+                    </div>
+
+                    <div class="info-card">
+                        <div class="time-card">
+                            <div class="hora">
+                                <img src="/assets/svgs/hora-card.svg" alt="">
+                                <span>7 Horas</span>
+                            </div>
+                            <div class="tarefas">
+                                <img src="/assets/svgs/tarefas-card.svg" alt="">
+                                <span> 5 Exercicios</span>
+
+                            </div>
+                        </div>
+
+                        <div class="titulo">
+                            <h4>Word do basico ao avançado</h4>
+                        </div>
+
+                        <div class="bottom">
+                            <div class="price">R$ 157,00 </div>
+                            <button class="btn-card">Ver curso</button>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="curso-card" data-category="powerPoint">
+                    <div class="image-card">
+                        <img src="/assets/imgs/powerpoint.png" alt="curso informartica">
+                    </div>
+
+                    <div class="info-card">
+                        <div class="time-card">
+                            <div class="hora">
+                                <img src="/assets/svgs/hora-card.svg" alt="">
+                                <span>7 Horas</span>
+                            </div>
+                            <div class="tarefas">
+                                <img src="/assets/svgs/tarefas-card.svg" alt="">
+                                <span> 5 Exercicios</span>
+
+                            </div>
+                        </div>
+
+                        <div class="titulo">
+                            <h4>PowerPoint do basico ao avançado</h4>
                         </div>
 
                         <div class="bottom">
@@ -356,10 +416,10 @@
     <div class="s-faq">
         <div class="container">
 
-            <h2>Perguntas Frequentes.</h2>
+            <h2>Perguntas Frequentes</h2>
 
             <div class="collapsible">
-                <div class="item-faq active">
+                <div class="item-faq">
                     <div class="head-faq">
                         <img  class="icon-faq" src="/assets/svgs/plus.svg" alt="">
                         <h6>Quais tipos de cursos vocês oferecem?</h6>
@@ -369,10 +429,40 @@
                             e PowerPoint, além de conteúdos mais avançados voltados para gestores e tomadores de decisão,
                             como TI para Gestores, Computação em Nuvem e Segurança da Informação.</p>
                     </div>
-                   
-
-
                 </div>
+
+                <div class="item-faq">
+                    <div class="head-faq">
+                        <img  class="icon-faq" src="/assets/svgs/plus.svg" alt="">
+                        <h6>Terei acesso vitalício ao conteúdo?</h6>
+                    </div>
+                    <div class="resposta-faq">
+                        <p>Sim. Uma vez inscrito, o acesso aos cursos é vitalício. Você pode rever as aulas quando e quantas vezes quiser.</p>
+                    </div>
+                </div>
+
+                <div class="item-faq">
+                    <div class="head-faq">
+                        <img  class="icon-faq" src="/assets/svgs/plus.svg" alt="">
+                        <h6>Os cursos oferecem certificado?</h6>
+                    </div>
+                    <div class="resposta-faq">
+                        <p>Sim. Ao concluir o curso, você recebe um certificado digital de conclusão com validade em todo o território nacional.</p>
+                    </div>
+                </div>
+
+                <div class="item-faq">
+                    <div class="head-faq">
+                        <img  class="icon-faq" src="/assets/svgs/plus.svg" alt="">
+                        <h6>Os cursos são amigáveis para iniciantes?</h6>
+                    </div>
+                    <div class="resposta-faq">
+                        <p>Sim! Nossos cursos foram desenvolvidos pensando tanto em iniciantes quanto em profissionais que desejam atualizar ou aprofundar seus conhecimentos. Explicamos tudo de forma clara, prática e acessível.
+
+                        </p>
+                    </div>
+                </div>
+
             </div>
 
         </div>
