--- a/index.html
+++ b/index.html
@@ -469,6 +469,68 @@
 
     </div>
 
+    <div class="s-cta">
+        <div class="container">
+            <div class="card-cta">
+                <div class="infos-cta">
+                    <h2>Comece sua jornada de <br> aprendizado hoje!</h2>
+                    <button class="btn-black">Acessar a comunidade completa</button>
+                </div>
+ 
+
+            </div>
+
+        </div>
+    </div>
+
+    <footer>
+        <div class="container">
+            <div class="logo-footer">
+                <img src="/assets/imgs/logo-dark.png" alt="logo devsi tecnologia">
+            </div>
+
+            <div class="nav-footer">
+                <div class="pages-footer">
+                    <ul>
+                        <li>
+                            <a href="#">Quem somos</a>
+                        </li>
+                        <li>
+                            <a href="#">Todos os cursos</a>
+                        </li>
+                        <li>
+                            <a href="#">Contato</a>
+                        </li>
+                        <li>
+                            <a href="#">Politica de Privacidade</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="socials-footer">
+                    <ul>
+                        <li>
+                            <a href="#"> <img src="assets/svgs/wpp-footer.svg" alt="">(31)99923-4256</a>
+                        </li>
+
+                        <li>
+                            <a href="#"> <img src="assets/svgs/insta-footer.svg" alt="">@devsi.tecnologia</a>
+                        </li>
+
+                        <li>
+                            <a href="#"> <img src="assets/svgs/fb-footer.svg" alt="">@devsi.tecnologia</a>
+                        </li>
+
+                        <li>
+                            <a href="#"> <img src="assets/svgs/mail-footer.svg" alt="">contato@devsi.com.br</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+    </footer>
+
 
 
 
