menu responsivo homepage

--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
                             <a href="#">Home</a>
                         </li>
                         <li>
-                            <a href="#">Sobre</a>
+                            <a href="#empresa">Sobre</a>
                         </li>
                         <li>
                             <a href="#">Serviços</a>
                         </li>
                         <li>
-                            <a href="#">Cursos</a>
+                            <a href="/pages/cursos.html">Cursos</a>
                         </li>
                         <li>
-                            <a href="#">Acervo</a>
+                            <a href="/pages/acervo.html">Acervo</a>
                         </li>
                         <li>
-                            <a href="#">Contato</a>
+                            <a href="#contact">Contato</a>
                         </li>
                     </ul>
                 </nav>
@@ -339,7 +339,7 @@
 
     </section>
 
-    <section class="empresa">
+    <section class="empresa" id="empresa">
         <div class="container">
             <div class="top-empresa">
                 <div class="img-empresa">
@@ -451,7 +451,7 @@
     </section>
 
 
-    <section class="contact">
+    <section class="contact" id="contact">
         <div class="container">
 
             <div class="contat-forms">
@@ -533,6 +533,9 @@
             </div>
         </div>
     </footer>
+
+
+    <script src="/js/menu.js"></script>
 
 </body>
 
