--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -77,7 +77,7 @@
 
 
                 <div class="btns-header">
-                    <button class="btn-header-outline">Sou aluno <img src="/assets/svgs/student.svg"
+                    <button class="btn-header-outline-dark">Sou aluno <img src="/assets/svgs/student.svg"
                             alt="Area do aluno"></button>
                     <button class="btn-header-primary">Sou Empresa <img src="/assets/svgs/empresa.svg"
                             alt="Sou empresa"></button>
