--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <section class="solutions">
         <div class="container">
             <div class="top-info">
-                <h2>Desenvolvimento e soluções <br> em tecnologia</h2>
+                <h2>Desenvolvimento e soluções em tecnologia</h2>
                 <p>Oferecemos suporte em TI, cibersegurança, infraestrutura, manutenção preventiva, consultoria e
                     soluções personalizadas que ajudam sua empresa a ganhar produtividade, segurança e tranquilidade
                     para focar no que realmente importa: crescer.</p>
