--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a href="#empresa">Sobre</a>
                         </li>
                         <li>
-                            <a href="#">Serviços</a>
+                            <a href="/pages/services.html">Serviços</a>
                         </li>
                         <li>
                             <a href="/pages/cursos.html">Cursos</a>
