--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -22,22 +22,22 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="#">Home</a>
+                            <a href="../index.html">Home</a>
                         </li>
                         <li>
-                            <a href="#">Sobre</a>
+                            <a href="../index.html#empresa">Sobre</a>
                         </li>
                         <li>
-                            <a href="#">Serviços</a>
+                            <a href="/pages/services.html">Serviços</a>
                         </li>
                         <li>
-                            <a href="#">Cursos</a>
+                            <a href="/pages/cursos.html">Cursos</a>
                         </li>
                         <li>
-                            <a href="#">Acervo</a>
+                            <a href="/pages/acervo.html">Acervo</a>
                         </li>
                         <li>
-                            <a href="#">Contato</a>
+                            <a href="../index.html#contact">Contato</a>
                         </li>
                     </ul>
                 </nav>
@@ -45,30 +45,31 @@
                 <div class="mobile-menu" id="mobile-menu">
                     <ul>
                         <li>
-                            <a href="#">Home</a>
+                            <a href="../index.html">Home</a>
                         </li>
                         <li>
-                            <a href="#">Sobre</a>
+                            <a href="../index.html#empresa">Sobre</a>
                         </li>
                         <li>
-                            <a href="#">Serviços</a>
+                            <a href="/pages/services.html">Serviços</a>
                         </li>
                         <li>
-                            <a href="#">Cursos</a>
+                            <a href="/pages/cursos.html">Cursos</a>
                         </li>
                         <li>
-                            <a href="#">Acervo</a>
+                            <a href="/pages/acervo.html">Acervo</a>
                         </li>
                         <li>
-                            <a href="#">Contato</a>
+                            <a href="../index.html#contact">Contato</a>
                         </li>
                     </ul>
 
                     <div class="btns-menu-mobile">
-                        <button class="btn-header-primary">Sou Empresa <img src="/assets/svgs/empresa.svg"
-                                alt="Sou empresa"></button>
-                        <button class="btn-header-outline">Sou aluno <img src="/assets/svgs/student.svg"
-                                alt="Area do aluno"></button>
+                        <a href="https://devsitecnologia.suport.cloud/login" target="_blank"><button class="btn-header-primary">Sou Empresa <img src="/assets/svgs/empresa.svg"
+                            alt="Sou empresa"></button></a>
+                        <a href="https://aulas.devsi.com.br/entrar&return=https%253A%252F%252Faulas.devsi.com.br%252Fdashboard" target="_blank"><button class="btn-header-outline">Sou aluno <img src="/assets/svgs/student.svg"
+                                    alt="Area do aluno"></button></a>
+                        
                     </div>
 
 
@@ -77,10 +78,11 @@
 
 
                 <div class="btns-header">
-                    <button class="btn-header-outline-dark">Sou aluno <img src="/assets/svgs/student.svg"
-                            alt="Area do aluno"></button>
-                    <button class="btn-header-primary">Sou Empresa <img src="/assets/svgs/empresa.svg"
-                            alt="Sou empresa"></button>
+                    <a href="https://aulas.devsi.com.br/entrar&return=https%253A%252F%252Faulas.devsi.com.br%252Fdashboard" target="_blank"> <button class="btn-header-outline-dark">Sou aluno <img src="/assets/svgs/student.svg"
+                        alt="Area do aluno"></button></a>
+                        <a href="https://devsitecnologia.suport.cloud/login" target="_blank"><button class="btn-header-primary">Sou Empresa <img src="/assets/svgs/empresa.svg"
+                            alt="Sou empresa"></button></a>
+                    
                 </div>
                 <div class="icon-menu-mobile" id="hamburguer">
                     <img src="/assets/svgs/hamburguer-menu.svg" alt="menu hamburguer-menu" id="hamburguer-icon">
@@ -516,10 +518,10 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="white">
         <div class="container">
             <div class="logo-footer">
-                <img src="/assets/imgs/logo-dark.png" alt="logo devsi tecnologia">
+                <img src="/assets/imgs/logo-white.png" alt="logo devsi tecnologia">
             </div>
 
             <div class="nav-footer">
@@ -543,19 +545,19 @@
                 <div class="socials-footer">
                     <ul>
                         <li>
-                            <a href="#"> <img src="assets/svgs/wpp-footer.svg" alt="">(31)99923-4256</a>
+                            <a href="#"><img src="/assets/svgs/wpp-green.svg" alt="Whatsapp devsi">(31) 99563-8326</a>
                         </li>
 
                         <li>
-                            <a href="#"> <img src="assets/svgs/insta-footer.svg" alt="">@devsi.tecnologia</a>
+                            <a href="#"><img src="/assets/svgs/insta-green.svg" alt="instagram devsi tecnologia">@devsi.tecnologia</a>
                         </li>
 
                         <li>
-                            <a href="#"> <img src="assets/svgs/fb-footer.svg" alt="">@devsi.tecnologia</a>
+                           <a href="#"><img src="/assets/svgs/face-green.svg" alt="facebook devsi">@devsi.tecnologia</a>
                         </li>
 
                         <li>
-                            <a href="#"> <img src="assets/svgs/mail-footer.svg" alt="">contato@devsi.com.br</a>
+                           <a href="#"><img src="/assets/svgs/envelope-green.svg" alt="email devsi">contato@devsi.com</a>
                         </li>
                     </ul>
                 </div>
