--- a/pages/acervo.html
+++ b/pages/acervo.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@300,301,400,401,500,700,900&display=swap" rel="stylesheet">
-    <meta name="description" content="Explore nosso acervo digital com ebooks, livros técnicos e PDFs gratuitos voltados para tecnologia, inovação e capacitação profissional.">
+    <link rel="icon" type="image/x-icon" href="./assets/icodevsi.ico">
+    <meta name="description"  content="Soluções completas de TI para empresas. A Devsi Tecnologia oferece consultoria, infraestrutura, segurança e suporte técnico especializado para o seu negócio.">
+    <meta name="keywords" content="soluções TI, consultoria tecnologia, infraestrutura, segurança digital">
     <link rel="stylesheet" href="/styles/css/main.css">
     <title>Acervo Digital - Ebooks, Livros e PDFs Gratuitos | Devsi</title>
 </head>
