--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@300,301,400,401,500,700,900&display=swap" rel="stylesheet">
-    <meta name="description" content="Cursos de capacitação em TI para empresas. A Devsi Tecnologia oferece formação prática para equipes técnicas e gestores.">
+    <link rel="icon" type="image/x-icon" href="./assets/icodevsi.ico">
+    <meta name="description"
+        content="Soluções completas de TI para empresas. A Devsi Tecnologia oferece consultoria, infraestrutura, segurança e suporte técnico especializado para o seu negócio.">
+    <meta name="keywords" content="soluções TI, consultoria tecnologia, infraestrutura, segurança digital">
     <link rel="stylesheet" href="/styles/css/main.css">
-    <title>Devsi Tecnologia - Cursos Capacitores para TI Empresarial</title>
+    <title>Cursos DEVSI Tecnologia - Cursos de Excel , Informática e Gestão </title>
 </head>
 
 <body>
@@ -65,11 +68,13 @@
                     </ul>
 
                     <div class="btns-menu-mobile">
-                        <a href="https://devsitecnologia.suport.cloud/login" target="_blank"><button class="btn-header-primary">Sou Empresa <img src="/assets/svgs/empresa.svg"
-                            alt="Sou empresa"></button></a>
-                        <a href="https://aulas.devsi.com.br/entrar&return=https%253A%252F%252Faulas.devsi.com.br%252Fdashboard" target="_blank"><button class="btn-header-outline">Sou aluno <img src="/assets/svgs/student.svg"
-                                    alt="Area do aluno"></button></a>
-                        
+                        <a href="https://devsitecnologia.suport.cloud/login" target="_blank"><button
+                                class="btn-header-primary">Sou Empresa <img src="/assets/svgs/empresa.svg"
+                                    alt="Sou empresa"></button></a>
+                        <a href="https://aulas.devsi.com.br/entrar&return=https%253A%252F%252Faulas.devsi.com.br%252Fdashboard"
+                            target="_blank"><button class="btn-header-outline">Sou aluno <img
+                                    src="/assets/svgs/student.svg" alt="Area do aluno"></button></a>
+
                     </div>
 
 
@@ -78,11 +83,13 @@
 
 
                 <div class="btns-header">
-                    <a href="https://aulas.devsi.com.br/entrar&return=https%253A%252F%252Faulas.devsi.com.br%252Fdashboard" target="_blank"> <button class="btn-header-outline-dark">Sou aluno <img src="/assets/svgs/student.svg"
-                        alt="Area do aluno"></button></a>
-                        <a href="https://devsitecnologia.suport.cloud/login" target="_blank"><button class="btn-header-primary">Sou Empresa <img src="/assets/svgs/empresa.svg"
-                            alt="Sou empresa"></button></a>
-                    
+                    <a href="https://aulas.devsi.com.br/entrar&return=https%253A%252F%252Faulas.devsi.com.br%252Fdashboard"
+                        target="_blank"> <button class="btn-header-outline-dark">Sou aluno <img
+                                src="/assets/svgs/student.svg" alt="Area do aluno"></button></a>
+                    <a href="https://devsitecnologia.suport.cloud/login" target="_blank"><button
+                            class="btn-header-primary">Sou Empresa <img src="/assets/svgs/empresa.svg"
+                                alt="Sou empresa"></button></a>
+
                 </div>
                 <div class="icon-menu-mobile" id="hamburguer">
                     <img src="/assets/svgs/hamburguer-menu.svg" alt="menu hamburguer-menu" id="hamburguer-icon">
@@ -99,7 +106,7 @@
                     aprender de verdade.</p>
             </div>
 
-            <button class="btn-primary">QUERO ME INSCREVER</button>
+            <!-- <button class="btn-primary">QUERO ME INSCREVER</button> -->
 
             <!-- <div class="card-flutuante">
                 <div class="img-card-flutuante">
@@ -118,8 +125,7 @@
             <div class="video-hero">
 
 
-                <iframe
-                    src="https://www.youtube.com/embed/aYo3aFMaG5Q?controls=0&modestbranding=1&rel=0&autoplay=1&mute=1"
+                <iframe src="https://www.youtube.com/embed/lQ1xtCsXGGw?si=KoPtjS4szFwljCiS&autoplay=1&mute=1"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
@@ -144,35 +150,36 @@
 
                     <div class="card-aprendizado-1">
                         <div class="top-info-card">
-                            <h2>45+</h2>
+                            <h2>200+</h2>
 
                             <div class="icon">
-                                <img src="/assets/svgs/Timer.svg" alt="">
+                                <img src="/assets/svgs/200aulas.svg" alt="">
                             </div>
 
                         </div>
 
                         <div class="bottom-info">
-                            <h3>Horas de aula</h3>
-                            <p>Tenha acesso a uma grande variedade de cursos cuidadosamente elaborados, ministrados por
-                                profissionais de alto nível do mercado.</p>
+                            <h3>Aulas</h3>
+                            <p>Uma diversidade de cursos, desde Excel e Word até Informática
+                                Essencial e conteúdos para gestores. Aprenda com materiais práticos e dinâmicos.</p>
                         </div>
                     </div>
 
                     <div class="card-aprendizado-1">
                         <div class="top-info-card">
-                            <h2>∞</h2>
+                            <h2>365+</h2>
 
                             <div class="icon">
-                                <img src="/assets/svgs/ampulheta.svg" alt="">
+                                <img src="/assets/svgs/global.svg" alt="">
                             </div>
 
                         </div>
 
                         <div class="bottom-info">
-                            <h3>Acesso vitalício</h3>
-                            <p>Tenha acesso ilimitado aos conteúdos mesmo após a conclusão do curso. Aprenda no seu
-                                ritmo, revise quando quiser e mantenha o conhecimento sempre à sua disposição.</p>
+                            <h3>Acesse de onde quiser</h3>
+                            <p>Tenha acesso completo aos conteúdos de qualquer lugar, a qualquer hora, por 365 dias.
+                                Estude no seu ritmo e aproveite a flexibilidade para aprender sem limitações de tempo.
+                            </p>
                         </div>
                     </div>
 
@@ -188,8 +195,9 @@
 
                     <div class="info-card-2">
                         <h3>Acesso a nossa <br> comunidade</h3>
-                        <p>Ao se matricular, você entra para uma comunidade ativa de profissionais que compartilham
-                            experiências, trocam insights e crescem juntos.</p>
+                        <p>Adquira seu curso e inicie sua capacitação hoje mesmo. Conte com o suporte da nossa equipe e
+                            participe de uma comunidade ativa, onde alunos trocam experiências, compartilham dicas e
+                            evoluem juntos.</p>
                     </div>
 
                     <button class="btn-primary">ACESSAR COMUNIDADE</button>
@@ -199,18 +207,21 @@
 
                     <div class="card-aprendizado-1">
                         <div class="top-info-card">
-                            <h2>5+</h2>
+                            <h2>Suporte </h2>
 
                             <div class="icon">
-                                <img src="/assets/svgs/calendar.svg" alt="">
+                                <img src="/assets/svgs/suporte.svg" alt="">
                             </div>
 
                         </div>
 
                         <div class="bottom-info">
-                            <h3>Anos de experiência</h3>
-                            <p>Nossa metodologia é resultado de mais de 5 anos de atuação no ensino profissional. Cada
-                                detalhe dos cursos reflete nossa vivência prática e foco em resultados reais.</p>
+                            <h3>Ativo</h3>
+                            <p>Conte com uma equipe sempre disponível para tirar dúvidas, orientar seus estudos e ajudar
+                                você a aproveitar ao máximo cada curso. Tenha acompanhamento durante todo o seu
+                                aprendizado.
+
+
                         </div>
                     </div>
 
@@ -283,7 +294,8 @@
 
                         <div class="bottom">
                             <div class="price">R$ 97,47 </div>
-                            <button class="btn-card"><a href="https://pay.kiwify.com.br/C3LttPe" target="_blank">Comprar</a></button>
+                            <button class="btn-card"><a href="https://pay.kiwify.com.br/C3LttPe"
+                                    target="_blank">Comprar</a></button>
                         </div>
 
                     </div>
@@ -313,7 +325,8 @@
 
                         <div class="bottom">
                             <div class="price">R$ 47,90 </div>
-                            <button class="btn-card"><a href="https://pay.kiwify.com.br/BCC0A4i" target="_blank">Comprar</a></button>
+                            <button class="btn-card"><a href="https://pay.kiwify.com.br/BCC0A4i"
+                                    target="_blank">Comprar</a></button>
                         </div>
 
                     </div>
@@ -433,7 +446,8 @@
 
                         <div class="bottom">
                             <div class="price">R$ 197,00 </div>
-                            <button class="btn-card"><a href="https://pay.kiwify.com.br/eLXiuK8" target="_blank">Comprar</a></button>
+                            <button class="btn-card"><a href="https://pay.kiwify.com.br/eLXiuK8"
+                                    target="_blank">Comprar</a></button>
                         </div>
 
                     </div>
@@ -456,43 +470,51 @@
             <div class="collapsible">
                 <div class="item-faq">
                     <div class="head-faq">
-                        <img  class="icon-faq" src="/assets/svgs/plus.svg" alt="">
+                        <img class="icon-faq" src="/assets/svgs/plus.svg" alt="">
                         <h6>Quais tipos de cursos vocês oferecem?</h6>
                     </div>
                     <div class="resposta-faq">
-                        <p>Oferecemos cursos focados na capacitação prática em informática, como Informática Essencial, Word
-                            e PowerPoint, além de conteúdos mais avançados voltados para gestores e tomadores de decisão,
+                        <p>Oferecemos cursos focados na capacitação prática em informática, como Informática Essencial,
+                            Word
+                            e PowerPoint, além de conteúdos mais avançados voltados para gestores e tomadores de
+                            decisão,
                             como TI para Gestores, Computação em Nuvem e Segurança da Informação.</p>
                     </div>
                 </div>
 
                 <div class="item-faq">
                     <div class="head-faq">
-                        <img  class="icon-faq" src="/assets/svgs/plus.svg" alt="">
-                        <h6>Terei acesso vitalício ao conteúdo?</h6>
+                        <img class="icon-faq" src="/assets/svgs/plus.svg" alt="">
+                        <h6>Como funciona o suporte da plataforma?</h6>
                     </div>
                     <div class="resposta-faq">
-                        <p>Sim. Uma vez inscrito, o acesso aos cursos é vitalício. Você pode rever as aulas quando e quantas vezes quiser.</p>
+                        <p>Nosso suporte funciona de forma ativa e personalizada, sempre
+                            disponível para esclarecer dúvidas, orientar seus estudos e ajudar você a aproveitar ao
+                            máximo cada curso. Oferecemos acompanhamento contínuo durante todo o seu processo de
+                            aprendizado.</p>
                     </div>
                 </div>
 
                 <div class="item-faq">
                     <div class="head-faq">
-                        <img  class="icon-faq" src="/assets/svgs/plus.svg" alt="">
+                        <img class="icon-faq" src="/assets/svgs/plus.svg" alt="">
                         <h6>Os cursos oferecem certificado?</h6>
                     </div>
                     <div class="resposta-faq">
-                        <p>Sim. Ao concluir o curso, você recebe um certificado digital de conclusão com validade em todo o território nacional.</p>
+                        <p>Sim. Ao concluir o curso, você recebe um certificado digital de conclusão com validade em
+                            todo o território nacional.</p>
                     </div>
                 </div>
 
                 <div class="item-faq">
                     <div class="head-faq">
-                        <img  class="icon-faq" src="/assets/svgs/plus.svg" alt="">
+                        <img class="icon-faq" src="/assets/svgs/plus.svg" alt="">
                         <h6>Os cursos são amigáveis para iniciantes?</h6>
                     </div>
                     <div class="resposta-faq">
-                        <p>Sim! Nossos cursos foram desenvolvidos pensando tanto em iniciantes quanto em profissionais que desejam atualizar ou aprofundar seus conhecimentos. Explicamos tudo de forma clara, prática e acessível.
+                        <p>Sim! Nossos cursos foram desenvolvidos pensando tanto em iniciantes quanto em profissionais
+                            que desejam atualizar ou aprofundar seus conhecimentos. Explicamos tudo de forma clara,
+                            prática e acessível.
 
                         </p>
                     </div>
@@ -511,7 +533,7 @@
                     <h2>Comece sua jornada de <br> aprendizado hoje!</h2>
                     <button class="btn-black">Acessar a comunidade completa</button>
                 </div>
- 
+
 
             </div>
 
@@ -549,15 +571,18 @@
                         </li>
 
                         <li>
-                            <a href="#"><img src="/assets/svgs/insta-green.svg" alt="instagram devsi tecnologia">@devsi.tecnologia</a>
+                            <a href="#"><img src="/assets/svgs/insta-green.svg"
+                                    alt="instagram devsi tecnologia">@devsi.tecnologia</a>
                         </li>
 
                         <li>
-                           <a href="#"><img src="/assets/svgs/face-green.svg" alt="facebook devsi">@devsi.tecnologia</a>
+                            <a href="#"><img src="/assets/svgs/face-green.svg"
+                                    alt="facebook devsi">@devsi.tecnologia</a>
                         </li>
 
                         <li>
-                           <a href="#"><img src="/assets/svgs/envelope-green.svg" alt="email devsi">contato@devsi.com</a>
+                            <a href="#"><img src="/assets/svgs/envelope-green.svg"
+                                    alt="email devsi">contato@devsi.com</a>
                         </li>
                     </ul>
                 </div>
